[package]
name = "http_digest_headers"
description = "Parial implementation of the proposed httpbis-digest-headers spec"
version = "0.1.0"
edition = "2021"
authors = ["David Skyberg <davidskyberg@gmail.com>"]
readme = "README.md"
repository = "https://github.com/dskyberg/http_digest_headers"
homepage = "https://github.com/dskyberg/http_digest_headers"
documentation = "https://docs.rs/http_digest_headers"
license = "MIT"

[dependencies]
anyhow = "1.0.51"
base64 = "0.13.0"
openssl = { version = "0.10", optional = true }
ring = { version = "0.16.20", optional = true }
thiserror = "1.0.29"

[features]
default = ["use_openssl"]
use_openssl = ["openssl"]
use_ring = ["ring"]
